--- a/showNotes.html
+++ b/showNotes.html
@@ -188,115 +188,115 @@
     </div>
 </body>
 <script>
-    // let getAllNotes = JSON.parse(localStorage.getItem('noteArray'))
-    // console.log(getAllNotes)
+    let getAllNotes = JSON.parse(localStorage.getItem('noteArray'))
+    console.log(getAllNotes)
 
-    // setTimeout(function () {
-    //     renderShowData(getAllNotes)
-    // }, 1000);
+    setTimeout(function () {
+        renderShowData(getAllNotes)
+    }, 1000);
 
-    // const searchNote = (pram) => {
-    //     let searchValue = document.getElementById("searchNote").value
-    //     if (pram && pram.length > 0) {
-    //         return renderShowData(pram)
-    //     }
-    //     console.log(searchValue)
-    //     if (!searchValue.length) {
-    //         return renderShowData(getAllNotes)
-    //     }
+    const searchNote = (pram) => {
+        let searchValue = document.getElementById("searchNote").value
+        if (pram && pram.length > 0) {
+            return renderShowData(pram)
+        }
+        console.log(searchValue)
+        if (!searchValue.length) {
+            return renderShowData(getAllNotes)
+        }
 
-    //     const filteredNotes = getAllNotes && getAllNotes.length &&
-    //         getAllNotes.filter((data, index) => data.title.toLowerCase().includes(searchValue.toLowerCase()))
-    //     console.log(filteredNotes)
+        const filteredNotes = getAllNotes && getAllNotes.length &&
+            getAllNotes.filter((data, index) => data.title.toLowerCase().includes(searchValue.toLowerCase()))
+        console.log(filteredNotes)
 
-    //     if (!filteredNotes.length) {
-    //         alert("Note not find!")
-    //     }
-    //     if (filteredNotes && filteredNotes.length) {
-    //         return renderShowData(filteredNotes)
-    //     }
-    // }
+        if (!filteredNotes.length) {
+            alert("Note not find!")
+        }
+        if (filteredNotes && filteredNotes.length) {
+            return renderShowData(filteredNotes)
+        }
+    }
 
-    // const renderShowData = (data) => {
-    //     document.getElementById("allNotes").innerHTML = null
-    //     data && data.length && data.map((item, index) => {
-    //         document.getElementById("allNotes").innerHTML +=
-    //             `<div class="main" id="main${index}" ><div class="wrapperTitleAndIcon"><h3 id="title${index}" class="title">${item.title}</h3><div class="wrapperIcons"><i class="fas fa-edit" id="editIcon" onclick="editClickHandler(${index}, '${item.createdDate}')" ></i><i class="fa fa-trash" id="deleteIcon" onclick="deleteClickHandler(${index}, '${item.createdDate}')" ></i></div></div><p id="desc${index}" class="desc">${item.description}</p><div/>`
-    //     })
-    // }
+    const renderShowData = (data) => {
+        document.getElementById("allNotes").innerHTML = null
+        data && data.length && data.map((item, index) => {
+            document.getElementById("allNotes").innerHTML +=
+                `<div class="main" id="main${index}" ><div class="wrapperTitleAndIcon"><h3 id="title${index}" class="title">${item.title}</h3><div class="wrapperIcons"><i class="fas fa-edit" id="editIcon" onclick="editClickHandler(${index}, '${item.createdDate}')" ></i><i class="fa fa-trash" id="deleteIcon" onclick="deleteClickHandler(${index}, '${item.createdDate}')" ></i></div></div><p id="desc${index}" class="desc">${item.description}</p><div/>`
+        })
+    }
 
-    // const editClickHandler = (index, item) => {
-    //     const filterNote = getAllNotes && getAllNotes.length &&
-    //         getAllNotes.find((data) => data.createdDate === item)
-    //     console.log(filterNote)
+    const editClickHandler = (index, item) => {
+        const filterNote = getAllNotes && getAllNotes.length &&
+            getAllNotes.find((data) => data.createdDate === item)
+        console.log(filterNote)
 
-    //     document.getElementById("modal").innerHTML +=
-    //         `<div class="modalRoot"><div class="modalContainer">
-    //     <div>
-    //     <h2 class="heading">You are update this note</h2>
-    //     <input type="text" id="updateInputTitle"  placeholder="Note title" />
-    //     </div>
-    //     <div>
-    //     <textarea id="updateAreaText" rows="15" cols="20" placeholder="Enter note text"></textarea>
-    // </div>
-    // <button id="updateBtn" onclick="updateNote('${filterNote.createdDate}')">Update Note</button>
-    // <button id="cancelBtn" onclick="cancelModal()">Cancel</button>
-    //     </div></div>`
+        document.getElementById("modal").innerHTML +=
+            `<div class="modalRoot"><div class="modalContainer">
+        <div>
+        <h2 class="heading">You are update this note</h2>
+        <input type="text" id="updateInputTitle"  placeholder="Note title" />
+        </div>
+        <div>
+        <textarea id="updateAreaText" rows="15" cols="20" placeholder="Enter note text"></textarea>
+    </div>
+    <button id="updateBtn" onclick="updateNote('${filterNote.createdDate}')">Update Note</button>
+    <button id="cancelBtn" onclick="cancelModal()">Cancel</button>
+        </div></div>`
 
-    //     document.getElementById("updateInputTitle").value = filterNote.title
-    //     document.getElementById("updateAreaText").value = filterNote.description
-    // }
+        document.getElementById("updateInputTitle").value = filterNote.title
+        document.getElementById("updateAreaText").value = filterNote.description
+    }
 
-    // const updateNote = (item) => {
-    //     const actualData = getAllNotes;
-    //     console.log(actualData, "Before")
-    //     const updatedIndex = actualData.findIndex((data) => data.createdDate === item)
-    //     console.log(updatedIndex, "updatedIndex")
-    //     const updatedNote = {
-    //         title: document.getElementById("updateInputTitle").value,
-    //         description: document.getElementById("updateAreaText").value,
-    //         createdDate: item,
-    //         updatedDate: new Date(),
-    //     }
-    //     console.log(updatedNote, "updatedNote")
-    //     const a = actualData[updatedIndex] = updatedNote
-    //     console.log(a, "a")
-    //     console.log(actualData, "After")
-    //     localStorage.setItem("noteArray", JSON.stringify(actualData))
-    //     cancelModal()
-    // }
+    const updateNote = (item) => {
+        const actualData = getAllNotes;
+        console.log(actualData, "Before")
+        const updatedIndex = actualData.findIndex((data) => data.createdDate === item)
+        console.log(updatedIndex, "updatedIndex")
+        const updatedNote = {
+            title: document.getElementById("updateInputTitle").value,
+            description: document.getElementById("updateAreaText").value,
+            createdDate: item,
+            updatedDate: new Date(),
+        }
+        console.log(updatedNote, "updatedNote")
+        const a = actualData[updatedIndex] = updatedNote
+        console.log(a, "a")
+        console.log(actualData, "After")
+        localStorage.setItem("noteArray", JSON.stringify(actualData))
+        cancelModal()
+    }
 
-    // const deleteClickHandler = (index, item) => {
-    //     const actualData = getAllNotes;
-    //     const deletedIndex = actualData.findIndex((data) => data.createdDate === item)
-    //     const afterDeletedData = actualData.splice(deletedIndex, 1);
-    //     localStorage.setItem("noteArray", JSON.stringify(actualData))
-    //     searchNote(actualData)
-    // }
+    const deleteClickHandler = (index, item) => {
+        const actualData = getAllNotes;
+        const deletedIndex = actualData.findIndex((data) => data.createdDate === item)
+        const afterDeletedData = actualData.splice(deletedIndex, 1);
+        localStorage.setItem("noteArray", JSON.stringify(actualData))
+        searchNote(actualData)
+    }
 
-    // const sortedNotes = () => {
-    //     const val = document.getElementById("mySelect").value;
-    //     if (val === "alphabet") {
-    //         const sortByAlphabeted = getAllNotes && getAllNotes.length && getAllNotes.sort((a, b) => {
-    //             if (a.title.toLowerCase() > b.title.toLowerCase()) return 1;
-    //             if (a.title.toLowerCase() < b.title.toLowerCase()) return -1;
-    //             return 0;
-    //         });
-    //         searchNote(sortByAlphabeted)
-    //     }
-    //     if (val === "lastEdited") {
-    //         const sortByLastEdited = getAllNotes && getAllNotes.length && getAllNotes.sort((a, b) => {
-    //             if (new Date(a.updatedDate) < new Date(b.updatedDate)) return 1;
-    //             if (new Date(a.updatedDate) > new Date(b.updatedDate)) return -1;
-    //             return 0;
-    //         });
-    //         searchNote(sortByLastEdited)
-    //     }
-    // }
+    const sortedNotes = () => {
+        const val = document.getElementById("mySelect").value;
+        if (val === "alphabet") {
+            const sortByAlphabeted = getAllNotes && getAllNotes.length && getAllNotes.sort((a, b) => {
+                if (a.title.toLowerCase() > b.title.toLowerCase()) return 1;
+                if (a.title.toLowerCase() < b.title.toLowerCase()) return -1;
+                return 0;
+            });
+            searchNote(sortByAlphabeted)
+        }
+        if (val === "lastEdited") {
+            const sortByLastEdited = getAllNotes && getAllNotes.length && getAllNotes.sort((a, b) => {
+                if (new Date(a.updatedDate) < new Date(b.updatedDate)) return 1;
+                if (new Date(a.updatedDate) > new Date(b.updatedDate)) return -1;
+                return 0;
+            });
+            searchNote(sortByLastEdited)
+        }
+    }
 
-    // const cancelModal = () => {
-    //     document.getElementById("modal").innerHTML = null
-    // }
+    const cancelModal = () => {
+        document.getElementById("modal").innerHTML = null
+    }
 
 </script>
 
